--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body>
-        <h1>ciao</h1>
-        
+        <h1 id="h1">ciao</h1>
+        <script src="index.js"></script>
     </body>
 </html>
